# metricus

./: .gitignore  Cargo.toml  README.md  prepare.sh  publish.sh
metricus/: Cargo.toml  README.md
metricus-agent/: Cargo.toml  README.md
metricus-macros/: Cargo.toml
metricus/benches/: dispatch.rs  static_vs_manual.rs  static_vs_manual_counter.rs
metricus/examples/: custom_backend.rs  custom_backnd.rs  vtable_backend.rs
metricus/src/: counter.rs  histogram.rs  lib.rs
metricus_agent/: Cargo.toml
metricus_agent/benches/: latency.rs
metricus_agent/examples/: config.yml  config_from_file.rs  file_exporter.rs  file_json_exporter.rs  udp_json_exporter.rs  udp_lp_exporter.rs  unix_datagram_lp_exporter.rs  unix_socket_json_exporter.rs
metricus_agent/src/: affinity.rs  aggregator.rs  config.rs  error.rs  exporter.rs  lib.rs
metricus_allocator/: Cargo.toml  README.md
metricus_allocator/examples/: background_thread.rs
metricus_allocator/src/: lib.rs
metricus_macros/: Cargo.toml  README.md
metricus_macros/src/: lib.rs
