[workspace]
members = [
    "metricus",
    "metricus_agent",
    "metricus_macros"
]
resolver = "2"

[workspace.package]
version = "0.0.4"
edition = "2021"
license = "MIT"
description = "Low latency metrics framework."
documentation = "https://docs.rs/metricus"
repository = "https://github.com/HaveFunTrading/metricus"
keywords = ["metrics", "low-latency"]
categories = ["development-tools::debugging"]
rust-version = "1.83.0"


