[workspace]
members = [
    "metricus",
    "metricus_agent",
    "metricus_allocator",
    "metricus_macros"
]
resolver = "2"

[workspace.package]
version = "0.0.5"
edition = "2021"
license = "MIT"
description = "Low latency metrics framework."
documentation = "https://docs.rs/metricus"
repository = "https://github.com/HaveFunTrading/metricus"
keywords = ["metrics", "low-latency"]
categories = ["development-tools::debugging"]
rust-version = "1.83.0"

[workspace.dependencies]
# workspace
metricus = { path = "./metricus" }
metricus_macros = { path = "./metricus_macros" }
# external
criterion = "0.5.1"
proc-macro2 = "1.0"
quote = "1.0"
syn = { version = "1.0", features = ["derive"] }
jemallocator = "0.5"
mimalloc = "0.1"
quanta = "0.12.5"

[profile.bench]
lto = true
codegen-units = 1
debug = false