[package]
name = "metricus"
version.workspace = true
edition.workspace = true
license.workspace = true
description.workspace = true
readme = "./README.md"
documentation.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true
rust-version.workspace = true

[features]
default = []
rdtsc = ["dep:quanta"]

[dependencies]
quanta = { version = "0.12.5", optional = true }

[dev-dependencies]
# workspace
metricus_macros = { workspace = true }

# external
criterion = { workspace = true }
rtrb = "0.3.2"

[[bench]]
name = "static_vs_manual"
path = "benches/static_vs_manual.rs"
harness = false
