[package]
name = "metricus"
version.workspace = true
edition.workspace = true
license.workspace = true
description.workspace = true
readme = "./README.md"
documentation.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true
rust-version.workspace = true

[features]
default = []
rdtsc = ["dep:quanta"]

[dependencies]
quanta = { workspace = true, optional = true }
serde = { version = "1.0.217", features = ["derive"] }

[dev-dependencies]
metricus_macros = { workspace = true }
criterion = { workspace = true }


[[bench]]
name = "static_vs_manual"
path = "benches/static_vs_manual.rs"
harness = false
