[package]
name = "metricus_allocator"
version.workspace = true
edition.workspace = true
license.workspace = true
description.workspace = true
readme = "./README.md"
documentation.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true
rust-version.workspace = true

[dependencies]
# internal
metricus = { workspace = true }
metricus_macros = { workspace = true }

# external
jemallocator = { workspace = true, optional = true }
mimalloc = { workspace = true, optional = true }

[features]
default = []
jemalloc = ["dep:jemallocator"]
mimalloc = ["dep:mimalloc"]